--- a/LinaresOrihuela-part-one/css/styles.css
+++ b/LinaresOrihuela-part-one/css/styles.css
@@ -12,7 +12,13 @@ header {
 }
 
 .header-button {
-  width: auto;
+  background-color: #20a8b4;
+  color: white;
+  border: none;
+  padding: 12px;
+  border-radius: 10px;
+  width: 100%;
+  margin-top: 10px;
 }
 
 header h1 {
@@ -28,14 +34,14 @@ header h1 a {
   color: #ff5c0f;
 }
 
-button {
+
+.centered button {
   background-color: #20a8b4;
   color: white;
   border: none;
   padding: 12px;
-  cursor: pointer;
   border-radius: 10px;
-  width: 100%; 
+  width: 100%;
   margin-top: 10px;
 }
 
@@ -60,49 +66,39 @@ a:hover {
   height: 70vh;
 }
 
-.centered p,
-.centered button {
-  margin: 10px;
+.centered p{
+  margin-left: 10px;
 }
 
-@media screen and (max-width: 767px) {
-  header {
-    flex-direction: column;
-    align-items: flex-start;
-  }
+nav {
+  display: flex;
+}
 
-  header h1 {
-    margin-top: 10px;
-  }
-
-  nav {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-  }
-
-  .right-image {
-    display: none;
-  }
-
-  main {
-    display: block;
-  }
+.right-image {
+  display: none;
 }
 
 @media screen and (min-width: 768px) {
-  nav {
+  nav ul {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: left;
   }
 
   nav a {
-    padding-right: 50px;
+    padding-right: 20px;
   }
 
   nav button {
     margin-right: 30px;
+  }
+
+  nav ul {
+    flex: 1;
+  }
+
+  .header-button {
+    width: auto;
   }
 
   .centered {
@@ -111,20 +107,17 @@ a:hover {
   }
 
   .centered p {
-    margin-left: 20px;
+    margin-left: 10px;
   }
 
   .centered button {
     margin-left: 20px;
+    width: auto;
   }
 
   .code-image {
     width: 100px;
     margin-left: 20px;
-  }
-
-  button {
-    width: auto;
   }
 
   main {
@@ -133,7 +126,8 @@ a:hover {
   }
 
   .right-image {
+    display: block;
     max-width: 30%;
-    height: auto;
+    height: auto; 
   }
 }
